[gd_scene load_steps=2 format=3 uid="uid://c5051tgos4wb3"]

[ext_resource type="Script" path="res://UI/GameStartUI.gd" id="1"]

[node name="GameStartUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.294118)

[node name="TitleLabel" type="Label" parent="ColorRect"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = -11.5
theme_override_font_sizes/font_size = 32
text = "Fuchsspiel"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -6.0
offset_right = 45.0
offset_bottom = 17.0
grow_vertical = 0
theme_override_font_sizes/font_size = 5
text = "1.0.0"

[node name="StartButton" type="Button" parent="ColorRect"]
process_mode = 2
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.0
offset_right = 23.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 12
text = "Start"

[node name="LoadButton" type="Button" parent="ColorRect"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 20.0
offset_right = 23.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Load"

[node name="QuitButton" type="Button" parent="ColorRect"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 51.0
offset_right = 23.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Quit"

[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_QuitButton_pressed"]
